--- a/archex/css/main.css
+++ b/archex/css/main.css
@@ -113,6 +113,21 @@ h1 {
 .header__nav_subelem a:hover {
   color: #B3D6E9; }
 
+.header__mob_nav_menu {
+  display: none;
+  position: absolute;
+  top: 110px;
+  width: -webkit-calc(100% - 30px);
+  width: calc(100% - 30px);
+  z-index: 100;
+  margin-left: 15px;
+  margin-right: 15px;
+  height: 42px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  outline: none;
+  background-color: #E4E4E4; }
+
 .carousel__imgcontainer {
   background: url(../img/bgrd1.jpg) no-repeat center center;
   -webkit-background-size: cover;
@@ -439,6 +454,8 @@ h1 {
     height: 600px; }
   .header__nav_menu {
     display: none; }
+  .header__mob_nav_menu {
+    display: inline-block; }
   .carousel__textContainer {
     top: 230px; }
   h1 {
