--- a/mercore/css/main.css
+++ b/mercore/css/main.css
@@ -544,7 +544,7 @@ footer {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   min-height: 50px;
-  padding: 15px 0;
+  padding: 15px;
   color: #858585; }
   .footer__content a {
     color: #858585;
@@ -574,7 +574,88 @@ footer {
     margin-bottom: 30px; }
   .news__image {
     display: block;
-    margin: 0 auto 30px; } }
+    margin: 0 auto 30px; }
+  .mainMenu__mobile-menu {
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    margin-top: 15px;
+    margin-right: 15px;
+    height: 40px;
+    width: 40px;
+    background: url("../img/menu-white.png") no-repeat center center #858585;
+    -webkit-background-size: 20px 20px;
+            background-size: 20px 20px;
+    cursor: pointer; }
+  .mainMenu-wrapper {
+    height: 140px; }
+  .mainMenu {
+    height: 140px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .mainMenu__list {
+    position: absolute;
+    z-index: 1000;
+    top: 55px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #858585;
+    width: 100%;
+    line-height: 40px;
+    padding: 0;
+    font-size: 1.2em;
+    display: none; }
+  .mainMenu__list-open {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .mainMenu__link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    padding: 0 15px; }
+    .mainMenu__link:hover {
+      color: #fff; }
+  .mainMenu__link-active {
+    background-color: #ffffff;
+    color: #858585; }
+    .mainMenu__link-active:hover {
+      color: #858585; }
+  .search, .search__box {
+    width: 100%; }
+  .brandMenu-wrapper {
+    height: 220px; }
+  .brandMenu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 220px; }
+  .shopMenu {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .carousel__cell1, .carousel__cell2, .carousel__cell3 {
+    -webkit-background-size: 200% 200%;
+            background-size: 200%; } }
 
 @media screen and (max-width: 1200px) {
   .signUp__btn {
