--- a/mercore/css/main.css
+++ b/mercore/css/main.css
@@ -209,7 +209,8 @@ a:hover {
   line-height: 50px;
   text-transform: uppercase;
   font-weight: 600;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
 
 .catMenu__elem:last-child {
   border-right: 2px solid #fff; }
@@ -580,7 +581,6 @@ footer {
     -o-transition: .5s;
     transition: .5s;
     margin-top: 15px;
-    margin-right: 15px;
     height: 40px;
     width: 40px;
     background: url("../img/menu-white.png") no-repeat center center #858585;
@@ -655,7 +655,45 @@ footer {
             justify-content: center; }
   .carousel__cell1, .carousel__cell2, .carousel__cell3 {
     -webkit-background-size: 200% 200%;
-            background-size: 200%; } }
+            background-size: 200%; }
+  .catMenu__mobile-menu {
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    display: block;
+    height: 40px;
+    width: 40px;
+    background: url("../img/menu-primary-color.png") no-repeat center center #fff;
+    -webkit-background-size: 20px 20px;
+            background-size: 20px 20px;
+    cursor: pointer;
+    margin: 0 auto; }
+  .catMenu-wrapper {
+    height: 44px;
+    width: 100%; }
+  .catMenu {
+    z-index: 1000;
+    padding: 0;
+    margin: 0 15px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    border: 2px solid #858585;
+    font-size: 1.2em;
+    display: none; }
+  .catMenu-open {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .catMenu__elem {
+    text-align: center;
+    border: none;
+    background-color: #fff; }
+  .catMenu__elem:last-child {
+    border-right: none; } }
 
 @media screen and (max-width: 1200px) {
   .signUp__btn {
