--- a/mercore/css/main.css
+++ b/mercore/css/main.css
@@ -244,7 +244,8 @@ a:hover {
     color: #fff; }
 
 .carousel-wrapper {
-  background-color: #F4F4F4; }
+  background-color: #F4F4F4;
+  height: auto; }
 
 .flickity-prev-next-button {
   -webkit-box-sizing: border-box;
@@ -268,7 +269,6 @@ a:hover {
 
 .carousel {
   width: 100%;
-  height: auto;
   padding: 0; }
 
 .carousel__cell {
@@ -638,7 +638,8 @@ footer {
     .mainMenu__link-active:hover {
       color: #858585; }
   .search, .search__box {
-    width: 100%; }
+    width: 100%;
+    margin-bottom: 10px; }
   .brandMenu-wrapper {
     height: 220px; }
   .brandMenu {
