--- a/archex/css/main.css
+++ b/archex/css/main.css
@@ -5,11 +5,47 @@
 a:hover {
   text-decoration: none; }
 
+#loadScreen {
+  background: #fff;
+  opacity: 1;
+  position: absolute;
+  margin: 0 auto;
+  z-index: 10000;
+  top: 0;
+  width: 100%;
+  height: 100vw; }
+
+.outer {
+  width: 100px;
+  height: 100px;
+  margin: 300px auto;
+  border-top: 5px solid #27B8D1;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-animation: rot1 55s linear infinite;
+          animation: rot1 55s linear infinite; }
+
+@-webkit-keyframes rot1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(11360deg);
+            transform: rotate(11360deg); } }
+
+@keyframes rot1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(11360deg);
+            transform: rotate(11360deg); } }
+
 .contactForm {
   position: fixed;
   bottom: 0;
   right: 15px;
-  z-index: 10000;
+  z-index: 100;
   height: 350px;
   width: 350px;
   background-color: #FFF;
