--- a/archex/css/main.css
+++ b/archex/css/main.css
@@ -13,12 +13,14 @@ a:hover {
   z-index: 10000;
   top: 0;
   width: 100%;
-  height: 100vw; }
+  height: 1600px;
+  height: 100vh; }
 
-.outer {
+.loading {
   width: 100px;
   height: 100px;
   margin: 300px auto;
+  margin: 40vh auto;
   border-top: 5px solid #27B8D1;
   -webkit-border-radius: 50%;
           border-radius: 50%;
